<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:background="?attr/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:text="@string/intro_mail"
            android:textSize="15sp"
            android:textColor="?attr/textColor"
            android:padding="5dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/title_mail"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="match_parent"
            android:id="@+id/title_mail"
            android:textColor="?attr/textColor"
            android:inputType="textEmailSubject"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/message_mail"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="match_parent"
            android:id="@+id/message_mail"
            android:textColor="?attr/textColor"
            android:inputType="text"
            android:gravity="start"
            android:minHeight="150dp"
            android:layout_height="wrap_content"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/cancelMail_button"
                android:text="@string/cancel_mail"
                android:layout_height="wrap_content"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="?attr/textColor"
                android:id="@+id/sendMail_button"
                android:text="@string/send_mail"
                android:backgroundTint="?attr/colorPrimary"
                android:layout_height="wrap_content"/>
    </RelativeLayout>


</LinearLayout>