<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".map.NorwayMap">

    <com.sdsmdg.harjot.vectormaster.VectorMasterView
            android:id="@+id/norgeskart_vector_temp"
            android:layout_width="380dp"
            android:layout_height="400dp"
            app:vector_src="@drawable/norgeskart" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:max="29"
            android:id="@+id/seekBar_temp"
            android:thumbTint="@color/blueDark"
            android:progressTint="@color/blue"
            android:foregroundTint="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:progress="3"
            app:layout_constraintHorizontal_bias="0.476" android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/rstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kartArstall" android:layout_marginTop="57dp"
            app:layout_constraintTop_toBottomOf="@+id/norgeskart_vector_temp" android:layout_marginBottom="33dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_temp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp" android:textSize="24sp" app:layout_constraintVertical_bias="0.503"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <TextView
            android:text="@string/_1963_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arstallTekst_temp" android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/kartArstall" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="218dp" android:layout_marginTop="57dp"
            app:layout_constraintTop_toBottomOf="@+id/norgeskart_vector_temp" android:layout_marginBottom="33dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_temp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.503" android:textStyle="bold" android:textColor="@color/blue"/>
    <ImageView
            android:layout_width="90dp"
            android:layout_height="230dp" app:srcCompat="@drawable/legend_temp_bluepurple"
            android:id="@+id/norgeskart_legend_temp"
            app:layout_constraintBottom_toBottomOf="@+id/norgeskart_vector_temp"
            android:layout_marginEnd="48dp" android:layout_marginBottom="28dp"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="TODO"/>
    <Switch
            android:text="@string/fargeblindvennlig"
            android:layout_width="169dp"
            android:layout_height="33dp"
            android:id="@+id/fargeblind"
            android:thumbTint="@color/blue"
            app:layout_constraintTop_toTopOf="@+id/arstallTekst_temp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/arstallTekst_temp"
            android:layout_marginStart="208dp" app:layout_constraintVertical_bias="1.0"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/gjennomsnittstemperatur_i_celcius"
            android:layout_width="267dp"
            android:layout_height="0dp"
            android:id="@+id/forklaring_temp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/norgeskart_vector_temp"
            android:layout_marginTop="7dp"
    />

</android.support.constraint.ConstraintLayout>